kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: flask-app-deployment
  labels:
    app: flask-app
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-lang-detection
          image: simisimon/flask-lang-detection:1.1
          ports:
            - containerPort: 80
